# ztnet-cli

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml  e2e-session-auth.yml  release.yml  scoop.yml  version-bump.yml  winget.yml
bucket/: ztnet.json
docs/: api-reference.md  commands.md  configuration.md  development.md  packaging.md
docs/Tasks/: Initial.md  TASKS.md
docs/Tasks/auto-release-every-push/: FOLLOWUP.md  TASKS.md  plan.md
docs/Tasks/chocolatey/: FOLLOWUP.md  TASKS.md  plan.md
docs/Tasks/host-auth/: TASKS.md  plan.md
docs/Tasks/release/: TASKS.md  plan.md
docs/Tasks/tRPC/: TASKS.md  plan.md
e2e/: compose.yml
npm/: LICENSE  README.md  package.json
npm/scripts/: install.js  verify-version.js
packaging/chocolatey/: README.md
packaging/chocolatey/ztnet/: ztnet.nuspec
packaging/scoop/: ztnet.json.template
packaging/winget/: README.md
scripts/: e2e-session-auth.sh  set-choco-api-key-secret.ps1  smoke-test.ps1  ztnet-local.ps1
scripts/gha/chocolatey/: publish.ps1
scripts/gha/common/: check_env_output.py  configure_git_bot.py
scripts/gha/release/: apply_version_bump.py  check_release_exists.py  check_winget_pkgs_package.py  commit_and_tag.py  create_release.py  determine_meta.py  package_assets.py  publish_crates.py  read_cargo_version.py  release_gate.py  stage_npm_artifacts.py  update_scoop_manifest.py
src/: app.rs  cli.rs  config.rs  context.rs  error.rs  host.rs  http.rs  main.rs  multi_base.rs  output.rs
src/app/: admin.rs  api.rs  auth.rs  common.rs  config_cmd.rs  export.rs  member.rs  network.rs  network_trpc.rs  org.rs  planet.rs  resolve.rs  stats.rs  trpc.rs  trpc_client.rs  trpc_resolve.rs  user.rs
src/cli/: admin.rs  api.rs  auth.rs  completion.rs  config_cmd.rs  export.rs  network.rs  org.rs  planet.rs  stats.rs  trpc.rs  user.rs
(+5 files in other folders)
