[package]\nname = "ztnet"\nversion = "0.1.1"\nedition = "2024"\ndescription = "ZTNet CLI — manage ZeroTier networks via ZTNet"\nlicense = "AGPL-3.0-only"\nreadme = "README.md"\nrepository = "https://github.com/JKamsker/ztnet-cli"\nhomepage = "https://github.com/JKamsker/ztnet-cli"\nkeywords = ["zerotier", "ztnet", "cli"]\ncategories = ["command-line-utilities"]\nexclude = ["external/**", "target/**"]\n\n[dependencies]\nclap = { version = "4.5", features = ["derive", "env"] }\nclap_complete = "4.5"\nhumantime = "2.2"\nserde = { version = "1.0", features = ["derive"] }\nserde_json = "1.0"\nserde_yaml = "0.9"\nthiserror = "2.0"\ntoml = "0.9"\ncomfy-table = "7.2"\nreqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }\ntokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }\nurl = "2.5"\nbase64 = "0.22"\n