[package]
name = "ztnet"
version = "0.1.2"
edition = "2024"
description = "ZTNet CLI — manage ZeroTier networks via ZTNet"
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/JKamsker/ztnet-cli"
homepage = "https://github.com/JKamsker/ztnet-cli"
keywords = ["zerotier", "ztnet", "cli"]
categories = ["command-line-utilities"]
exclude = ["external/**", "target/**"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
humantime = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
toml = "0.9"
comfy-table = "7.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
url = "2.5"
base64 = "0.22"
